fixing balloons size on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,26 +1,13 @@
 .pop-balloons {
    .gradient-text {
-      background: linear-gradient(to right, #ff52f2, #012fb0);
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-align: center;
       font-size: 1.4rem;
+      text-shadow: 1px 1px 2px black, 0 0 25px orange, 0 0 5px orangered;
    }
 
-   .circles {
-      width: 600px;
-
-      .circle {
-         width: 100px;
-         height: 100px;
-      }
-   }
+   .circles { max-width: 800px; }
 
    .gameover {
-      font-size: 4em;
-      text-align: center;
-      color: white;
+      font-size: 3em;
       text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
    }
 
@@ -28,8 +15,6 @@
       background-color: darkblue;
       border-radius: 0.7rem;
 
-      &:hover {
-         background-color: rgb(0, 0, 206);
-      }
+      &:hover { background-color: rgb(0, 0, 206); }
    }
 }
